Update header SVG to use <img> instead of <object>. Change <h1> to <div> in header to prevent use of multiple <h1>. Update home page to use visibly hidden <h1>

--- a/src/scss/objects/_svg.scss
+++ b/src/scss/objects/_svg.scss
@@ -6,8 +6,11 @@
 	height:1px;
 	&__object{
 		position:absolute;
+		top:0;
+		left:0;
 		z-index:2;
 		display:block;
 		width:100%;
+		height:100%;
 	}
 }
